syntax = "proto3";

option go_package = "dislinkt/common/connection";

package connection;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service ConnectionService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/connection/{userId}"
    };
  }
  rpc Create(CreateRequest) returns(CreateResponse) {
    option (google.api.http) = {
      post: "/connection"
      body: "connection"
    };
  }
  rpc Delete(DeleteRequest) returns(DeleteResponse) {
    option (google.api.http) = {
      delete: "/connection/{id}"
    };
  }
  rpc Update(UpdateRequest) returns(UpdateResponse) {
    option (google.api.http) = {
      patch: "/connection/{id}"
    };
  }
  rpc GetRecommendations(GetRecommendationsRequest) returns(GetRecommendationsResponse) {
    option (google.api.http) = {
      get: "/connection/user/{userId}/recommendation"
    };
  }
  rpc BlockUser(BlockUserRequest) returns(BlockUserResponse) {
    option (google.api.http) = {
      post: "/connection/user/{userId}/block"
    };
  }
  rpc GetBlockedUsers(GetBlockedUsersRequest) returns(GetBlockedUsersResponse) {
    option (google.api.http) = {
      get: "/connection/user/{userId}/block"
    };
  }
  rpc GetBlockers(GetBlockersRequest) returns(GetBlockersResponse) {
    option (google.api.http) = {
      get: "/connection/user/{userId}/blocker"
    };
  }
  rpc UnblockUser(UnblockUserRequest) returns(UnblockUserResponse) {
    option (google.api.http) = {
      delete: "/connection/user/{userId}/block"
    };
  }
  rpc GetConnection(GetConnectionRequest) returns(GetConnectionResponse) {
    option (google.api.http) = {
      get: "/connection/{user1Id}/{user2Id}"
    };
  }
}

message GetRequest {
  string userId = 1;
}

message GetResponse {
  repeated Connection connections = 1;
}

message CreateRequest {
  Connection connection = 1;
}

message CreateResponse {
  Connection connection = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
}

message UpdateRequest {
  string id = 1;
}

message UpdateResponse {
  Connection connection = 1;
}

message GetRecommendationsRequest {
  string userId = 1;
}

message GetRecommendationsResponse {
  repeated string recommendations = 1;
}

message BlockUserRequest {
  string userId = 1;
}

message BlockUserResponse {
  bool success = 1;
}

message GetBlockedUsersRequest {
  string userId = 1;
}

message GetBlockedUsersResponse {
  repeated string blockedUsers = 1;
}

message GetBlockersRequest {
  string userId = 1;
}

message GetBlockersResponse {
  repeated string blockers = 1;
}

message UnblockUserRequest {
  string userId = 1;
}

message UnblockUserResponse {
  bool success = 1;
}

message GetConnectionRequest {
  string user1Id = 1;
  string user2Id = 2;
}

message GetConnectionResponse {
  Connection connection = 1;
}

message Connection {
  string id = 1;
  string issuerId = 2;
  string subjectId = 3;
  google.protobuf.Timestamp date = 4;
  bool isApproved = 5;
}